# json-testing-with-pytest

./: .gitignore  README.md  main.py  pyproject.toml
data/: customers.json
src/crm_testing/: extractors.py  readers.py  transformers.py  validate_file.py
test/: test_extractors.py  test_transformers.py  test_validate_file.py
test-ideas/: ideas.md
